refactor: 🎨 Update avatar structure and class names for improved semantic clarity

--- a/social-links-profile-main/assets/css/styles.css
+++ b/social-links-profile-main/assets/css/styles.css
@@ -115,7 +115,7 @@ body {
   flex: 1 0 0;
 }
 
-.profile-card__avatar {
+.profile-card__avatar img {
   width: 88px;
   height: 88px;
   overflow: hidden;
@@ -124,7 +124,7 @@ body {
 }
 
 /* Profile Information */
-.card__profile-info {
+.profile-card__info {
   /* styles */
 }
 
