--- a/social-links-profile-main/assets/css/styles.css
+++ b/social-links-profile-main/assets/css/styles.css
@@ -83,22 +83,34 @@ select {
 /* ==========================================================================
    Layout Mobile
    ========================================================================== */
+main {
+  display: flex;
+  width: 375px;
+  height: 812px;
+  padding: 0px 24px;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  background: var(--color-grey-900, #141414);
+}
+
 .card {
   display: flex;
+  padding: var(--spacing-300, 24px);
+  border-radius: 12px;
+  background: var(--color-grey-800, #1F1F1F);
   flex-direction: column;
   align-items: center;
-  padding: var(--space-md);
-  gap: var(--space-md);
-  background: var(--color-grey-800);
-  border-radius: 12px;
+  gap: var(--spacing-300, 24px);
+  flex: 1 0 0;
 }
 
 /* Avatar styles */
 .card__avatar {
   width: 88px;
   height: 88px;
-  border-radius: 50%;
   overflow: hidden;
+  border-radius: 999px;  
 }
 
 /* Profile info */
