fix: 🐛 Correct font file path in CSS for 'Inter' font; ensure proper loading of font resources

--- a/social-links-profile-main/assets/css/styles.css
+++ b/social-links-profile-main/assets/css/styles.css
@@ -1,7 +1,7 @@
 /* --- Fonts --- */
 @font-face {
   font-family: 'Inter';
-  src: url('/home/steven/projects/fem/social-links-profile-main/assets/fonts/Inter-VariableFont_slnt,wght.tff') format('woff2');
+  src: url('/social-links-profile-main/assets/fonts/Inter-VariableFont_slnt\,wght.ttf') format('woff2');
 }
 /* --- Variables --- */
 :root {
